# closer-engine

closer-engine-data-layer/: .gitignore  README.md  main.py  pyproject.toml
closer-engine-data-layer/scripts/: ingest_rag.py
closer-engine-data-layer/supabase/: config.toml
closer-engine-data-layer/supabase/migrations/: 20260307161250_init_b2b_schema.sql
closer-engine-data-layer/tests/: test_e2e_ingestion.py  test_infrastructure.py  test_ingestion.py
closer-engine-gateway/: .env.example  .gitignore  README.md  main.py  pyproject.toml
closer-engine-gateway/app/: __init__.py  main.py
closer-engine-gateway/app/api/: __init__.py
closer-engine-gateway/app/api/webhooks/: __init__.py  meta.py
closer-engine-gateway/app/core/: __init__.py  config.py
closer-engine-gateway/app/services/: __init__.py  whatsapp_worker.py
closer-engine-gateway/tests/: __init__.py  test_main.py
closer-engine-gateway/tests/api/: __init__.py  test_async_webhook.py  test_meta_webhook.py
